# parallel-algorithms-2022

./: README.md
bfs/: CMakeLists.txt  README.md  run_experiments.sh  run_tests.sh
bfs/results/: par.csv  seq.csv
bfs/scripts/: process_results.py
bfs/src/: bfs.cpp  cubic_graph.cpp  main.cpp  my_tbb.cpp  test.cpp  utils.h
quicksort/: CMakeLists.txt  README.md  run_experiments.sh  run_tests.sh
quicksort/results/: io_bench.csv  par.csv  seq.csv  std.csv
quicksort/scripts/: process_results.py
quicksort/src/: main.cpp  qsort.cpp  test.cpp  utils.h
quicksort/tests/: small1.txt  small2.txt  small3.txt  small6.txt  small7.txt  small8.txt  uniform-5k.txt
